# liteflow

core/: .gitignore  .pdm.toml  01-hello-world.py  09-foreach-seq.py  pyproject.toml
core/liteflow/core/builders/: step_builder.py  workflow_builder.py
core/liteflow/core/models/: step_body.py
core/liteflow/core/primitives/: __init__.py  foreachsequence.py
core/liteflow/core/services/: event_consumer.py  execution_result_processor.py  workflow_executor.py  workflow_host.py
providers/sqlite/: readme.md  setup.py
providers/sqlite/liteflow/providers/sqlite/: __init__.py  converters.py  sqlite_persistence_provider.py  tables.py
samples/: 09-foreach-seq.py
